# ai_morning_post

./: .env.example  .gitignore  .ignore  AGENTS.md  README.md  abstract_fetcher.py  commands.py  db.py  embedding.py  feeds.json  feeds.json.example  generate_report.py  mailer.py  main.py  migrate.py  pyproject.toml  rss.py  tts.py  users.json  users.json.example  users.py
migrations/: 001_initial.sql  002_add_user_active.sql  003_add_user_interests.sql  004_add_article_embedding.sql  005_add_article_doi.sql  006_add_feed_publisher.sql
prompts/: report_system.txt  select_system.txt  voice_system.txt
