[project]
name = "ai-morning-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "numpy>=2.0.0",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=4.0.0",
    "markdown>=3.7",
]
